Connect Zootrack.db into Detection service and controller
Now the DB get updated when detection occurs.
still need to edit the strings in the log for more precise info

--- a/Backend/ZooTrack/ZooTrack/appsettings.json
+++ b/Backend/ZooTrack/ZooTrack/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Zootrack.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
