--- a/Backend/ZooTrack/ZooTrack.Client/ZooTrack.Client.csproj
+++ b/Backend/ZooTrack/ZooTrack.Client/ZooTrack.Client.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\sample-data\" />
+  </ItemGroup>
+
 </Project>
