add Statistics feature: controller, service & UI, other UI pages
add Statistics feature: controller, service & UI other UI pages

--- a/Backend/ZooTrack/ZooTrack/appsettings.json
+++ b/Backend/ZooTrack/ZooTrack/appsettings.json
@@ -5,8 +5,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "ZooTrack.Services": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CameraServiceSettings": {
+    "TargetAnimals": [ "person", "dog", "cow", "wolf", "tiger" ],
+    "HighlightSavePath": "D:\\CODE\\Zootrack\\ZooTrackNew\\Backend\\ZooTrack\\ZooTrack\\Data\\TargetAnimals.txt"
+  }
 }
