change User Setting to recive Json instead of strings

--- a/Backend/ZooTrack/ZooTrack/appsettings.json
+++ b/Backend/ZooTrack/ZooTrack/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "CameraServiceSettings": {
-    "TargetAnimals": [ "person", "dog", "cow", "wolf", "tiger" ],
-    "HighlightSavePath": "D:\\CODE\\Zootrack\\ZooTrackNew\\Backend\\ZooTrack\\ZooTrack\\Data\\TargetAnimals.txt"
+    "TargetAnimals": [ "person", "man", "bottle", "sheep", "dog", "cow", "wolf", "tiger" ],
+    "HighlightSavePath": "ZooTrack\\Media\\HighlightFrames"
   }
 }
