--- a/Backend/ZooTrack/ZooTrack/ZooTrackBackend.csproj
+++ b/Backend/ZooTrack/ZooTrack/ZooTrackBackend.csproj
@@ -35,6 +35,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Media\HighlightFrames\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
