Login Page added

--- a/Backend/ZooTrack/ZooTrack/appsettings.json
+++ b/Backend/ZooTrack/ZooTrack/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=Zootrack.db"
   },
+  "AppSettings": {
+    "Token": "a super secret key that should be much longer and more complex for a real application"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,9 +12,5 @@
       "ZooTrack.Services": "Debug"
     }
   },
-  "AllowedHosts": "*",
-  "CameraServiceSettings": {
-    "TargetAnimals": [ "person", "man", "bottle", "sheep", "dog", "cow", "wolf", "tiger" ],
-    "HighlightSavePath": "ZooTrack\\Media\\HighlightFrames"
-  }
+  "AllowedHosts": "*"
 }
